<resources>
    <string name="app_name">CursoAndroidFinal</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="collapsing_toolbar">collapsing toolbar</string>
    <string name="toolbar_imagen">toolbar imagen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">bienvenida</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="icono_principal">icono principal</string>
    <string name="home">Home</string>
    <string name="lista">Lista</string>
    <string name="mapa">Mapa</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="imagen_lugar">imagen lugar</string>
    <string name="action">Action</string>
    <string name="card_lugar">card_lugar</string>
    <string name="favorite_imagen">favorite_imagen</string>
    <string name="share_imagen">share_imagen</string>
    <string name="loading">Cargando ..</string>
    <string name="default_error">error</string>

</resources>
